# sql-xlsx-agent

./: .env.example  .gitignore  README.md  context.md  docker-compose.yml  prompt.md  run.py
backend/: __init__.py  main.py  pyproject.toml
backend/api/: __init__.py  chat.py  database.py  datasets.py  upload.py
backend/connectors/: __init__.py  database.py  mysql_connector.py  postgresql_connector.py  sqlite_connector.py
backend/langgraph/: __init__.py  graph.py  nodes.py  state.py
backend/langgraph/nodes/: __init__.py  analysis_planner.py  context_merger.py  context_retrieval.py  data_source_router.py  execution.py  insight.py  pandas_agent.py  question_understanding.py  response_formatter.py  result_evaluator.py  schema_discovery.py  sql_agent.py  tavily_research.py  validation.py  visualization.py
backend/models/: __init__.py  requests.py  responses.py  state.py
backend/services/: __init__.py  chat_service.py  file_handler.py
backend/vectorstore/: chroma_manager.py
docker/: README.md  backend.Dockerfile  frontend.Dockerfile
docs/: sample_datasets.md
frontend/: package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/chat/: page.tsx
frontend/app/database/: page.tsx
frontend/app/datasets/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: chart.tsx  chat-input.tsx  chat-message.tsx  code-block.tsx
frontend/components/ui/: badge.tsx  dropdown-menu.tsx  (+1 more)
frontend/types/: index.ts
tests/: test_api.py  test_connectors.py  test_langgraph.py  test_models.py  test_services.py
