[project]
name = "sql-tavily"
version = "0.1.0"
description = "AI Data Analyst Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-core>=0.3.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "chromadb>=0.5.0",
    "tavily-python>=0.4.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"